Membership offers card added

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <!-- Membership section starts here -->
         <section>
             <div>
-                <h1 class="fitness" style="text-align: center; background-color: #FFFFFF1A; text-shadow: 2px 2px 5px black; width: max-content; margin: 0 auto;" ><i>Fitness Membership</i></h1>
+                <h1 class="fitness" style="text-align: center; background-color: #FFFFFF1A; text-shadow: 2px 2px 5px black; margin: 0 auto;" ><i>Fitness Membership</i></h1>
             </div>
             <div class="membership-offers">
                 <div class="membership-card">
@@ -223,15 +223,47 @@
                     <br>
                     <ul class="service">
                         <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                        <li> <i class="fa-regular fa-square-check"></i> Without suspension of gym membership</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the gym</li>
                     </ul>
                     <div class="purchase">
                         <button class="buy-button" type="button">Buy</button>
                     </div>
                 </div>
                 <div class="membership-card">
-                    <h2 class="pakage-title">Pass'Trial'</h2>
-                    <h2 class="pakage-title">$0</h2>
+                    <h2 class="pakage-title">Pass'Easy Start'</h2>
+                    <h2 class="pakage-title">$119</h2>
+                    <br>
+                    <hr>
+                    <br>
+                    <ul class="service">
+                        <li> <i class="fa-regular fa-square-check"></i> Visit without restrictions 24/7</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i> Individual training program</li><br>
+                        <li> <i class="fa-regular fa-square-check"></i> Access to the Vtrainer application</li><br>
+                        <li> <i class="fa-regular fa-square-check"></i> Trainer support</li>
+                    </ul>
+                    <div class="purchase">
+                        <button class="buy-button" type="button">Buy</button>
+                    </div>
+                </div>
+                <div class="membership-card">
+                    <h2 class="pakage-title">Pass'Free Time'</h2>
+                    <h2 class="pakage-title">$49</h2>
+                    <br>
+                    <hr>
+                    <br>
+                    <ul class="service">
+                        <li> <i class="fa-regular fa-square-check"></i> The entrance time to the gym is from 14:00 to 16:00</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i> Without suspension of gym membership</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the gym</li>
+                    </ul>
+                    <div class="purchase">
+                        <button class="buy-button" type="button">Buy</button>
+                    </div>
+                </div>
+                <div class="membership-card">
+                    <h2 class="pakage-title">Pass'1 Month'</h2>
+                    <h2 class="pakage-title">$85</h2>
                     <br>
                     <hr>
                     <br>
@@ -244,8 +276,8 @@
                     </div>
                 </div>
                 <div class="membership-card">
-                    <h2 class="pakage-title">Pass'Trial'</h2>
-                    <h2 class="pakage-title">$0</h2>
+                    <h2 class="pakage-title">Pass'In Shape'</h2>
+                    <h2 class="pakage-title">$165</h2>
                     <br>
                     <hr>
                     <br>
@@ -258,36 +290,8 @@
                     </div>
                 </div>
                 <div class="membership-card">
-                    <h2 class="pakage-title">Pass'Trial'</h2>
-                    <h2 class="pakage-title">$0</h2>
-                    <br>
-                    <hr>
-                    <br>
-                    <ul class="service">
-                        <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
-                    </ul>
-                    <div class="purchase">
-                        <button class="buy-button" type="button">Buy</button>
-                    </div>
-                </div>
-                <div class="membership-card">
-                    <h2 class="pakage-title">Pass'Trial'</h2>
-                    <h2 class="pakage-title">$0</h2>
-                    <br>
-                    <hr>
-                    <br>
-                    <ul class="service">
-                        <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
-                    </ul>
-                    <div class="purchase">
-                        <button class="buy-button" type="button">Buy</button>
-                    </div>
-                </div>
-                <div class="membership-card">
-                    <h2 class="pakage-title">Pass'Trial'</h2>
-                    <h2 class="pakage-title">$0</h2>
+                    <h2 class="pakage-title">Pass'In Shape'</h2>
+                    <h2 class="pakage-title">$195</h2>
                     <br>
                     <hr>
                     <br>
