Membership and footer section complete

--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
         <!-- Membership section starts here -->
         <section>
             <div>
-                <h1 class="fitness" style="text-align: center; background-color: #FFFFFF1A; text-shadow: 2px 2px 5px black; margin: 0 auto;" ><i>Fitness Membership</i></h1>
+                <h1 class="fitness"
+                    style="text-align: center; background-color: #FFFFFF1A; text-shadow: 2px 2px 5px black; margin: 0 auto;">
+                    <i>Fitness Membership</i></h1>
             </div>
             <div class="membership-offers">
                 <div class="membership-card">
@@ -224,7 +226,8 @@
                     <ul class="service">
                         <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
                         <li> <i class="fa-regular fa-square-check"></i> Without suspension of gym membership</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the gym</li>
+                        <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the
+                            gym</li>
                     </ul>
                     <div class="purchase">
                         <button class="buy-button" type="button">Buy</button>
@@ -253,9 +256,11 @@
                     <hr>
                     <br>
                     <ul class="service">
-                        <li> <i class="fa-regular fa-square-check"></i> The entrance time to the gym is from 14:00 to 16:00</li> <br>
+                        <li> <i class="fa-regular fa-square-check"></i> The entrance time to the gym is from 14:00 to
+                            16:00</li> <br>
                         <li> <i class="fa-regular fa-square-check"></i> Without suspension of gym membership</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the gym</li>
+                        <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the
+                            gym</li>
                     </ul>
                     <div class="purchase">
                         <button class="buy-button" type="button">Buy</button>
@@ -269,7 +274,8 @@
                     <br>
                     <ul class="service">
                         <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym
+                        </li>
                     </ul>
                     <div class="purchase">
                         <button class="buy-button" type="button">Buy</button>
@@ -283,7 +289,8 @@
                     <br>
                     <ul class="service">
                         <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym
+                        </li>
                     </ul>
                     <div class="purchase">
                         <button class="buy-button" type="button">Buy</button>
@@ -297,7 +304,8 @@
                     <br>
                     <ul class="service">
                         <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym</li>
+                        <li> <i class="fa-regular fa-square-check"></i>The trainer on duty will introduce you to the gym
+                        </li>
                     </ul>
                     <div class="purchase">
                         <button class="buy-button" type="button">Buy</button>
@@ -329,6 +337,11 @@
                 <h4 class="fitness-title-description">Affiliate Program</h4>
                 <h4 class="fitness-title-description">About Us</h4>
             </div>
+
+        </div>
+        <hr style="width: 80%; margin: 0 auto;">
+        <div class="footer-name">
+            <h1 class="copy-right">All right reserved @WebDiv-Rakib</h1>
         </div>
     </footer>
 
