Meet out team responsive done

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <!-- <footer>
         <div class="fitness-section">
             <div class="fitness-margin">
                 <h1 class="fitness"><i>Fitness</i></h1>
@@ -343,7 +343,7 @@
         <div class="footer-name">
             <h1 class="copy-right">All right reserved @WebDiv-Rakib</h1>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
