Membership offer responsive

--- a/index.html
+++ b/index.html
@@ -212,9 +212,7 @@
         <!-- Membership section starts here -->
         <section>
             <div>
-                <h1 class="fitness"
-                    style="text-align: center; background-color: #FFFFFF1A; text-shadow: 2px 2px 5px black; margin: 0 auto;">
-                    <i>Fitness Membership</i></h1>
+                <h1 class="fitness"><i>Fitness Membership</i></h1>
             </div>
             <div class="membership-offers">
                 <div class="membership-card">
@@ -240,7 +238,6 @@
                     <hr>
                     <br>
                     <ul class="service">
-                        <li> <i class="fa-regular fa-square-check"></i> Visit without restrictions 24/7</li> <br>
                         <li> <i class="fa-regular fa-square-check"></i> Individual training program</li><br>
                         <li> <i class="fa-regular fa-square-check"></i> Access to the Vtrainer application</li><br>
                         <li> <i class="fa-regular fa-square-check"></i> Trainer support</li>
@@ -314,7 +311,7 @@
             </div>
         </section>
     </main>
-    <!-- <footer>
+    <footer>
         <div class="fitness-section">
             <div class="fitness-margin">
                 <h1 class="fitness"><i>Fitness</i></h1>
@@ -343,8 +340,7 @@
         <div class="footer-name">
             <h1 class="copy-right">All right reserved @WebDiv-Rakib</h1>
         </div>
-    </footer> -->
-
+    </footer>
 </body>
 
 </html>
