Footer responsive done

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <footer>
         <div class="fitness-section">
             <div class="fitness-margin">
-                <h1 class="fitness"><i>Fitness</i></h1>
+                <h1 class="fitness-2"><i>Fitness</i></h1>
                 <p class="fitness-description">We believe fitness should be accessible to everyone,<br>everywhere,
                     regardless of income or access to
                     a
