Suitable description added base on website

--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
                 <div class="habit-card">
                     <img class="habit-image" src="images/image 3.png" alt="">
                     <h5 class="card-title">Movement</h5>
-                    <p class="card-description">We believe fitness should be<br>accessible to everyone</p>
+                    <p class="card-description">Basic movement patterns:<br>A background</p>
                 </div>
                 <div class="habit-card">
                     <img class="habit-image" src="images/image 2.png" alt="">
-                    <h5 class="card-title">Movement</h5>
-                    <p class="card-description">We believe fitness should be<br>accessible to everyone</p>
+                    <h5 class="card-title">Time</h5>
+                    <p class="card-description">Aim for at least 3-4 <br> workouts per week</p>
                 </div>
                 <div class="habit-card">
                     <img class="habit-image" src="images/image 4.png" alt="">
-                    <h5 class="card-title">Movement</h5>
-                    <p class="card-description">We believe fitness should be<br>accessible to everyone</p>
+                    <h5 class="card-title">Practice</h5>
+                    <p class="card-description">Everybody around you is just <br> as self-conscious as you are.</p>
                 </div>
                 <div class="habit-card">
                     <img class="habit-image" src="images/image 5.png" alt="">
-                    <h5 class="card-title">Movement</h5>
+                    <h5 class="card-title">Weight loss</h5>
                     <p class="card-description">We believe fitness should be<br>accessible to everyone</p>
                 </div>
             </div>
@@ -103,9 +103,10 @@
                 <div class="run-section-1">
                     <h1 class="run-title">Run an Extra<br>
                         Mile Easily</h1>
-                    <p class="run-description">We believe fitness should be accessible to everyone,<br>everywhere,
-                        regardless of income or access
-                        to a gym. With<br>hundreds of professional workouts.</p>
+                    <p class="run-description">“Running an extra mile” is more than an idiom. It has latent in it the
+                        spirit which is more than that extra mile on athletic fields. <br> The dictionary meaning refers
+                        to
+                        ‘the willingness to make a special effort to achieve something or do something.</p>
                     <div class="join-now-button"><button class="run-button">Join Now</button></div>
                 </div>
                 <div class="run-section-2">
@@ -118,8 +119,8 @@
         <section>
             <div class="bmi-container">
                 <h1 class="bmi-title">BMI Calculator</h1>
-                <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere,
-                    regardless of income or <br> access to a gym.</p>
+                <p class="bmi-description">The Body Mass Index (BMI) Calculator can be used to calculate BMI value and
+                    corresponding weight status while taking age into consideration.</p>
             </div>
             <div class="bmi-section">
                 <div class="bmi-table">
@@ -151,9 +152,8 @@
                 </div>
                 <div class="bmi-calculator">
                     <h1 class="bmi-calculator-title">Calculate your BMI</h1>
-                    <p class="bmi-calculator-description">We believe fitness should be accessible to everyone,
-                        everywhere, regardless of <br> income or
-                        access to a gym. </p>
+                    <p class="bmi-calculator-description">BMI is a measurement of a person's leanness or corpulence
+                        based on their height and weight.</p>
                     <form>
                         <div class="bmi-calculator-input">
                             <input type="number" placeholder="Height/cm">
@@ -178,9 +178,9 @@
         <section>
             <div class="meet-out-team">
                 <h1 class="meet-title">Meet Our Team</h1>
-                <p class="meet-description">We believe fitness should be accessible to everyone, everywhere, regardless
-                    of income or access to a
-                    gym.</p>
+                <p class="meet-description">Whether you're a veteran gym-goer or just taking your first steps on your
+                    fitness journey,personal trainers can tailor programmes to your level of ability, improve your form,
+                    and help you meet your goals faster.</p>
             </div>
             <div class="trainer-image-card">
                 <div class="trainer-1 trainer">
@@ -224,8 +224,8 @@
                     <ul class="service">
                         <li> <i class="fa-regular fa-square-check"></i> Access to the gym from 8:00 to 14:00</li> <br>
                         <li> <i class="fa-regular fa-square-check"></i> Without suspension of gym membership</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the
-                            gym</li>
+                        <!-- <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the
+                            gym</li> -->
                     </ul>
                     <div class="purchase">
                         <button class="buy-button" type="button">Buy</button>
@@ -255,9 +255,8 @@
                     <ul class="service">
                         <li> <i class="fa-regular fa-square-check"></i> The entrance time to the gym is from 14:00 to
                             16:00</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i> Without suspension of gym membership</li> <br>
-                        <li> <i class="fa-regular fa-square-check"></i> The trainer on duty will introduce you to the
-                            gym</li>
+                        <li> <i class="fa-regular fa-square-check"></i> Without suspension of gym membership</li><br>
+
                     </ul>
                     <div class="purchase">
                         <button class="buy-button" type="button">Buy</button>
@@ -329,10 +328,10 @@
             </div>
             <div class="fitness-margin">
                 <h2 class="fitness-title">Get Started</h2>
-                <h4 class="fitness-title-description">Service</h4>
-                <h4 class="fitness-title-description">Contact Us</h4>
-                <h4 class="fitness-title-description">Affiliate Program</h4>
-                <h4 class="fitness-title-description">About Us</h4>
+                <h4 class="fitness-title-description">Fitness</h4>
+                <h4 class="fitness-title-description">Platform</h4>
+                <h4 class="fitness-title-description">Workout Library</h4>
+                <h4 class="fitness-title-description">App Design</h4>
             </div>
 
         </div>
